fix tabby-tab style

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1689,7 +1689,7 @@ footer p span {
 }
 
 [type=radio]:checked ~ label ~ .tabby-content {
-  z-index: 1;
+  z-index: -1;
   /* show/hide */
   opacity: 1;
   transform: scale(1);
@@ -1846,6 +1846,14 @@ a {
 
 .cutom-color:hover {
   color: white !important;
+}
+
+.custom-parent-tabby-tab {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100px;
+  justify-content: center;
+  z-index: 100 !important;
 }
 
 /* BREAKPOINTS ----- */
