--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2611,10 +2611,16 @@ a {
 .responsive-table .col-5 {
     flex-basis: 20%;
 }
+#exclusive-recipt-print,
 #recipt-print {
+    margin-left: 0;
+}
+.recipt-btn-container {
     display: flex;
-    justify-self: end;
-    margin: 1rem auto;
+    flex-direction: row;
+    gap: 0.7rem;
+    justify-content: center;
+    padding: 0.3rem 0;
 }
 @media all and (max-width: 767px) {
     .responsive-table .table-header {
@@ -2962,6 +2968,11 @@ a {
     }
     .c-type-trigger {
         margin-right: 0.6rem;
+    }
+    .recipt-btn-container {
+        display: flex;
+        flex-direction: column;
+        gap: 0.7rem;
     }
     .costume-container {
         padding-top: 1rem;
