--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2993,6 +2993,91 @@ a {
   margin-left: 0;
 }
 
+#notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 460px;
+  width: 100%;
+  text-align: center;
+  line-height: 1.4;
+}
+
+.notfound .notfound-404 {
+  position: relative;
+  width: 180px;
+  height: 180px;
+  margin: 0px auto 50px;
+}
+
+.notfound .notfound-404 > div:first-child {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: var(--clr-accent);
+  transform: rotate(45deg);
+  border: 5px dashed var(--clr-dark);
+  border-radius: 5px;
+}
+
+.notfound .notfound-404 > div:first-child:before {
+  content: "";
+  position: absolute;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  top: -5px;
+  box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.1) inset;
+  border-radius: 5px;
+}
+
+.notfound .notfound-404 h1 {
+  color: var(--clr-dark);
+  font-weight: 700;
+  margin: 0;
+  font-size: 90px;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+}
+
+.notfound h2 {
+  font-size: 33px;
+  font-weight: 700;
+}
+
+.notfound p {
+  font-size: 16px;
+  color: var(--clr-dark);
+  font-weight: 400;
+  margin-bottom: 2rem;
+}
+
+.notfound .secondary-btn {
+  background-color: var(--clr-secondary);
+  color: var(--clr-primary);
+}
+
+.notfound .secondary-btn:hover {
+  background-color: var(--clr-dark);
+  color: var(--clr-accent);
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
