added some styles

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2784,6 +2784,15 @@ a {
   list-style: none;
 }
 
+.orders-table-title li:nth-child(1) {
+  width: 30%;
+  text-align: justify;
+}
+
+.orders-table-title li h6 {
+  line-height: 1.4rem;
+}
+
 .order-details {
   color: var(--clr-secondary);
   font-weight: 600;
@@ -3381,10 +3390,15 @@ a {
     margin-right: 0.6rem;
   }
 
+  .orders-table-title li:nth-child(1) {
+    width: 100%;
+  }
+
   .recipt-btn-container {
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
+    margin: 0 0.2rem;
   }
 
   .costume-container {
