--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1557,9 +1557,7 @@ footer p span {
     text-align: justify;
 }
 
-.text-right {
-    text-align: right !important;
-}
+    
 .float-right {
     float: right;
 }
@@ -1629,13 +1627,8 @@ a {
     margin-right: 5px;
 }
 
-.firstBtn {
-    position: relative;
-    top: 500px;
-}
-// #msform .action-button.firstBtn {
-//     transform: translate(10px, 430px);
-// }
+
+
 // ****************************************************plus
 .ProductDetails li div {
     margin: 100px;
@@ -1671,20 +1664,16 @@ a {
 }
 // ***********************end pricing page ******************************
 /* BREAKPOINTS ----- */
-// #msform .action-button.firstBtn {
-//     transform: translate(-77px,20px);
-// }
+
 
 @media screen and (max-width: 480px) {
     .w-Custom-50 {
         width: 75% !important;
     }
-    .tabs {
-        min-height: 580px;
-    }
+
     .tabby-tab label {
         max-width: 150px;
-        //    margin: 0 5px;
+      
         font-size: 13px;
         padding: 8px;
         text-align: justify;
@@ -1697,9 +1686,7 @@ a {
         margin-right: 0;
         margin-bottom: 20px;
     }
-    #msform fieldset {
-        min-height: 1200px;
-    }
+  
     .margin-order-2 {
         margin-right: 0;
     }
@@ -1707,34 +1694,24 @@ a {
     .content-min-height {
         min-height: 2500px;
     }
-    #msform .action-button.firstBtn {
-        transform: translate(2px, 680px);
-    }
+ 
 }
 
 @media only screen and (min-width: 480px) and (max-width: 992px) {
-    #msform .action-button.firstBtn {
-        transform: translate(2px, 340px);
-    }
-    .text-Cutom-right {
-        text-align: center !important;
-    }
+
+    // .text-Cutom-right {
+    //     text-align: center !important;
+    // }
 }
 @media screen and (max-width: 767px) {
-    .tabs {
-        min-height: 400px;
-    }
 
-    #msform fieldset {
-        min-height: 900px;
-    }
+
+  
     .margin-order-2 {
         margin-right: 0;
     }
 
-    .content-min-height {
-        min-height: 2300px;
-    }
+ 
 
     .pushTags-customMargin {
         margin-right: 20px;
@@ -1746,11 +1723,7 @@ a {
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 816px) {
-    #msform .action-button.firstBtn {
-        transform: translate(-50px, 350px);
-    }
-}
+
 @media screen and (min-width: 817px) and (max-width: 992px) {
     .order-margin-ObjQuantityLabel {
         margin: 0 33px;
@@ -1759,15 +1732,9 @@ a {
         margin-right: 25px;
     }
 
-    #msform .action-button.firstBtn {
-        transform: translate(-60px, 250px);
-    }
+
 }
-@media screen and (min-width: 992px) and (max-width: 1200px) {
-    #msform .action-button.firstBtn {
-        transform: translate(-80px, 100px);
-    }
-}
+
 
 // ************************************************************************************************************************//
 // ***********************************(jobOpportunities)********************************************
