--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1244,6 +1244,10 @@ footer p span {
 }
 
 //********************** ( order page ) **********************
+.bg-accent{
+    background-color: var(--clr-accent);
+}
+
 #heading {
     text-transform: uppercase;
     color: var(--clr-secondary);
@@ -1283,7 +1287,16 @@ footer p span {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
     line-height: 15px;
     padding: 0.7em 1rem;
+  
+
 }
+
+@media only screen and (min-width: 850px){
+    #msform .action-button{
+  transform: translate(-20px, -127px);
+    }
+}
+
 
 #msform .action-button:hover,
 #msform .action-button:focus {
@@ -1322,6 +1335,7 @@ footer p span {
 }
 
 #progressbar {
+    background-color: var(--clr-secondary);
     margin-bottom: 30px;
     overflow: hidden;
     color: lightgrey;
@@ -1331,6 +1345,7 @@ footer p span {
 }
 
 #progressbar li {
+   
     list-style-type: none;
     font-size: 15px;
     // comment
@@ -1340,11 +1355,13 @@ footer p span {
     float: left;
     position: relative;
     font-weight: 400;
+    z-index: 100;
 }
 
 #progressbar #account:before {
     font-family: FontAwesome;
     content: "\f666";
+    // color: var(--clr-dark);
 }
 
 #progressbar #personal:before {
@@ -1379,7 +1396,7 @@ footer p span {
     content: "";
     width: 100%;
     height: 2px;
-    background: lightgray;
+    background: var(--clr-primary);
     position: absolute;
     left: 0;
     top: 25px;
@@ -1388,7 +1405,9 @@ footer p span {
 
 #progressbar li.active:before,
 #progressbar li.active:after {
-    background: var(--clr-secondary);
+color: var(--clr-dark);
+background-color: var(--clr-primary);
+// z-index: -10;
 }
 
 .progress {
@@ -2577,19 +2596,19 @@ a {
     background-color: #fff;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
 }
-.responsive-table .col-1 {
+.responsive-table .col-1:not(.orderpage-table) {
     flex-basis: 20%;
 }
-.responsive-table .col-2 {
+.responsive-table .col-2:not(.orderpage-table) {
     flex-basis: 20%;
 }
-.responsive-table .col-3 {
+.responsive-table .col-3:not(.orderpage-table) {
     flex-basis: 20%;
 }
-.responsive-table .col-4 {
+.responsive-table .col-4:not(.orderpage-table) {
     flex-basis: 20%;
 }
-.responsive-table .col-5 {
+.responsive-table .col-5:not(.orderpage-table) {
     flex-basis: 20%;
 }
 #exclusive-recipt-print,
@@ -2605,7 +2624,7 @@ a {
 }
 @media all and (max-width: 767px) {
     .responsive-table .table-header {
-        display: none;
+        // display: none;
     }
     .responsive-table li {
         display: block;
