--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2624,7 +2624,7 @@ a {
 }
 @media all and (max-width: 767px) {
     .responsive-table .table-header {
-        // display: none;
+         display: none;
     }
     .responsive-table li {
         display: block;
