--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1682,6 +1682,22 @@ footer p span {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 2px, rgba(0, 0, 0, 0.23) 0px 0px 3px;
 }
 
+.testttt {
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 0px 5px;
+  border-radius: 1.3rem;
+  margin: auto;
+}
+
+.trash-icon {
+  font-size: 20px;
+}
+
+.trash-icon:hover i {
+  color: red;
+  font-size: 26px;
+  box-sizing: border-box;
+}
+
 .bg-accent {
   background-color: var(--clr-accent);
 }
@@ -3121,7 +3137,7 @@ a {
     display: flex;
     padding: 10px 0;
     justify-content: right;
-    min-width: 12rem;
+    min-width: 15rem;
   }
 
   .responsive-table .col:before {
