--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1244,9 +1244,28 @@ footer p span {
 }
 
 //********************** ( order page ) **********************
+.testttt{
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 0px 5px;
+    border-radius: 1.3rem;
+   margin: auto;
+
+}
+.trash-icon{
+    font-size: 20px;
+}
+.trash-icon:hover i{
+    
+    color: red;
+    font-size: 26px;
+    box-sizing: border-box;
+}
+
 .bg-accent{
     background-color: var(--clr-accent);
 }
+
+
+
 
 #heading {
     text-transform: uppercase;
@@ -2636,7 +2655,7 @@ a {
         display: flex;
         padding: 10px 0;
         justify-content: right;
-        min-width: 12rem;
+        min-width: 15rem;
     }
     .responsive-table .col:before {
         color: #6c7a89;
