--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1782,7 +1782,7 @@ footer p span {
 }
 
 .content-min-height {
-  min-height: 2000px;
+  min-height: 1600px;
 }
 
 #progressbar {
@@ -2149,7 +2149,7 @@ a {
   }
 
   .content-min-height {
-    min-height: 2500px;
+    min-height: 2000px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -2173,6 +2173,16 @@ a {
 
   .pushOptionAttr-customMargin {
     margin-right: 25px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .w-md-50 {
+    width: 50% !important;
+  }
+}
+@media screen and (min-width: 992px) {
+  .w-md-100 {
+    width: 100% !important;
   }
 }
 .custom-jO-style {
