--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1244,6 +1244,13 @@ footer p span {
 }
 
 //********************** ( order page ) **********************
+
+// display: flex;
+// flex-direction: column;
+// justify-content: end;
+// align-items: center;
+
+
 .testttt{
     box-shadow: rgba(0, 0, 0, 0.09) 0px 0px 5px;
     border-radius: 1.3rem;
@@ -1350,7 +1357,7 @@ footer p span {
 }
 
 .content-min-height {
-    min-height: 2000px;
+    min-height: 1600px;
 }
 
 #progressbar {
@@ -1731,7 +1738,7 @@ a {
     }
 
     .content-min-height {
-        min-height: 2500px;
+        min-height: 2000px;
     }
  
 }
@@ -1773,6 +1780,22 @@ a {
 
 
 }
+@media screen and (min-width: 768px) {
+    .w-md-50{
+        width: 50% !important;
+    }
+
+ 
+}
+@media screen and (min-width: 992px) {
+  
+
+    .w-md-100{
+        width: 100% !important;
+
+    }
+}
+
 
 
 // ************************************************************************************************************************//
