--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2149,6 +2149,11 @@ a {
   }
 
   .content-min-height {
+    min-height: 2200px;
+  }
+}
+@media only screen and (min-width: 479px) and (max-width: 992px) {
+  .content-min-height {
     min-height: 2000px;
   }
 }
