--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1244,7 +1244,9 @@ footer p span {
 }
 
 //********************** ( order page ) **********************
-
+.fa-solid .fa-trash{
+    box-sizing: border-box;
+}
 // display: flex;
 // flex-direction: column;
 // justify-content: end;
