added sweet alert to order page

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1263,7 +1263,7 @@ footer p span {
     font-size: 20px;
 }
 .trash-icon:hover i{
-    
+    cursor: pointer;
     color: red;
     font-size: 26px;
     box-sizing: border-box;
