--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2862,7 +2862,26 @@ a {
     color: var(--clr-accent);
   }
 
-
+// Questions And Answers Page ----------------------------------------------
+.accordion-button:after {
+    order: -1; //swap order
+    margin-left: 0.5rem; 
+    margin-right:0; // just extra space between text and icon
+}
+.accordion-button:not(.collapsed) {
+    color: var(--clr-accent);
+    background-color: var(--clr-dark);
+}
+.accordion-item p {
+    text-align: justify;
+    line-height: 1.8rem;
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23F6F6F6'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+.questions-text h3{
+   color: var(--clr-secondary);
+}
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
