--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3374,6 +3374,10 @@ a {
   color: var(--clr-secondary);
 }
 
+.accordion {
+  width: 50vw;
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
@@ -3417,6 +3421,10 @@ a {
 
 /* Mobile Screen --------------------------------------------------- */
 @media only screen and (min-width: 200px) and (max-width: 991px) {
+  .accordion {
+    width: unset;
+  }
+
   .vertical-line {
     display: none;
   }
