--- a/public/css/home.css
+++ b/public/css/home.css
@@ -363,6 +363,10 @@ h6 {
   margin-top: 4rem;
 }
 
+.blue-header {
+  color: var(--clr-secondary);
+}
+
 /* Variables ----------------------------------------------------------------- */
 :root {
   --clr-primary: #f6f6f6;
@@ -2194,9 +2198,10 @@ a {
     width: 100% !important;
   }
 }
-.custom-jO-style {
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-  border-radius: 0.5rem;
+.custom-jO-style input:focus-within {
+  background-color: #E8F0FE;
+  border-color: var(--clr-accent);
+  box-shadow: none;
 }
 
 .project-page-title h3 {
