--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2985,12 +2985,7 @@ a {
     right: 0;
     height: 4rem;
     border-radius: 0.3rem 0.3rem 0 0;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 1) 0%,
-        rgba(0, 113, 162, 1) 50%
-    );
+    background-color: var(--clr-secondary);
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .blog_post::after {
@@ -3001,13 +2996,8 @@ a {
     right: 0;
     height: 2.8rem;
     border-radius: 0 0 0.3rem 0.3rem;
-    background: rgb(255, 212, 0);
-    background: linear-gradient(
-        90deg,
-        rgba(255, 212, 0, 1) 0%,
-        rgba(0, 113, 162, 1) 50%
-    );
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: var(--clr-primary);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px -3px 6px, rgba(0, 0, 0, 0.23) 0px -3px 6px;
 }
 .blog_post .secondary-btn {
     z-index: 1;
