--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3527,6 +3527,50 @@ a {
   text-align: justify;
 }
 
+.weblog-post {
+  background-color: #fff;
+  padding: 5rem;
+  border-radius: 0.3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  position: relative;
+}
+
+.weblog-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.weblog-header h2 {
+  color: var(--clr-dark);
+}
+
+.weblog-date h5::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f133";
+  font-weight: bold;
+  float: right;
+  margin-left: 10px;
+}
+
+.weblog-header img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.weblog-picture img {
+  border-radius: 0.3rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.weblog-text p {
+  text-align: justify;
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
@@ -3881,6 +3925,18 @@ a {
 #video11 img,
 #video12 img {
     height: 442.94px;
+  }
+
+  .blog-post-margin {
+    margin-top: 3rem;
+  }
+
+  .blog-post-margin:nth-child(1) {
+    margin-top: 1rem;
+  }
+
+  .weblog-post {
+    padding: 1.5rem;
   }
 }
 /* Tablet Screen -----------------------------------------------*/
